Added OOP features

--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
 </head>
 <body>
     <header id = "main-header">
+
         <h1 id = "main-header-heading">To Do</h1>
+
         <form id = "main-header-form">
             <i class="fa fa-search" aria-hidden="true"></i>
             <input id = "filter" type = "text" placeholder = "Search a task...">
-            <i class="fa fa-times" aria-hidden="true"></i>
+            <i id = 'clear-search' class="fa fa-times" aria-hidden="true"></i>
         </form>
+
     </header>
 
     <div id = "hero">
         <div id = "side-nav"></div>
-
         <div id = "main-container">
 
             <div id = "container-heading">
@@ -37,6 +39,7 @@
                     <!-- List items to be added here -->
                 </ul>
             </div>
+            
         </div>
     </div>
 
